--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,7 @@ img{
 .pnc-bg{
     overflow:hidden;
 }
-.container{
+.pnc-bg{
     margin-top:40px;
     text-align: justify;
     
@@ -43,7 +43,7 @@ img{
     height:400px;
 }
 .background-sponsered{
-    margin-left: 38px;
+   
     margin-top:50px;
     background-image: url("../images/background-3.jpg");
     background-size: 100%;
@@ -54,6 +54,10 @@ img{
 footer{
     height:600px;
     width:1400px;
-    background:dimgray;
+    background:#282C2F;
     margin-top:30px;
+}
+
+.fa-map-marker{
+    background-color:#33383b;
 }
