--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,28 @@
 
 body{
     overflow-x:hidden;
+
+    height: 100%;
     
+}
+.logo-s{
+    font-family: 'Shojumaru';
+    color:blue;
+}
+.active-menu{
+    border-bottom:1px solid cyan;
 }
 .navbar{
     opacity: 75%;
+    background-color:white;
 }
+
 #navbar{
-    width:1400px;
+    width:100%;
+    
+}
+.page-wrapper{
+    min-height: 100%;
 }
 img{
     
@@ -17,6 +32,30 @@ img{
 .carousel-item{
     padding:0 40px;
 }
+#cardAfterSlider{
+    height:300px;
+    margin-bottom: 50px;
+    position:relative;
+   
+}
+.card-icon-wrapper{
+    height:150px;
+    width:150px;
+    background-color: cyan;
+    border-radius:50%;
+    position: absolute;
+    left:100px;
+    top:-50px;
+
+}
+.fa-facebook{
+    font-size:50px;
+    position: absolute;
+    left:58px;
+    top:40px;
+  
+}
+
 .orange-bg{
    
     margin-top:40px;
@@ -34,30 +73,197 @@ img{
     text-align: justify;
     
 }
+.card{
+    width:18 rem; 
+    height:600px;
+}
 .scroll{
     overflow: scroll;
     
 }
 .width{
-    width:350px;
+    width:600px;
     height:400px;
 }
+
 .background-sponsered{
    
     margin-top:50px;
-    background-image: url("../images/background-3.jpg");
+    background-image: url("../images/background-4.jpg");
     background-size: 100%;
-
+    
     background-repeat: no-repeat;
-    background-attachment: fixed;
+   /* background-attachment: fixed;*/
 }
 footer{
     height:600px;
-    width:1400px;
-    background:#282C2F;
+    width:100%;
+    background:#303036;
     margin-top:30px;
+    color:white;
+    position: relative;
 }
 
-.fa-map-marker{
-    background-color:#33383b;
+.footer-bottom{
+    background:#343a40;
+    color:#686868;
+    height:50px;
+    width:100%;
+    text-align:center;
+    position: absolute;
+    bottom:0;
+    left:0;
+    padding-top:15px;
+}
+
+
+.footer-section{
+    padding:20px 40px;
+}
+.link a li{
+    transition:.5s;
+    color:white;
+    text-decoration:none;
+}
+.link a li:hover{
+    text-decoration: none;
+    margin-left: 15px;
+    
+}
+.socials .mx-3
+{
+    transition:.5s;
+    margin-left: 15px;
+}
+.socials .fa-instagram,
+.socials .fa-twitter,
+.socials .fa-youtube,
+.socials .fa-google{
+    margin-left: 20px;
+    padding:10px;
+    transition:.5s;
+}
+.socials .fa-facebook:hover,
+.socials .fa-instagram:hover,
+.socials .fa-twitter:hover,
+.socials .fa-youtube:hover,
+.socials .fa-google:hover
+{
+    font-size:25px;
+    color:cyan;
+}
+@media screen and (max-width:992px){
+    .form-control{
+        font-size:14px;
+    }
+    #basic-addon2{
+        font-size:10px;
+    }
+    footer{
+        height:600px;
+        width:100%;
+        background:#303036;
+       
+        color:white;
+        position: relative;
+    }
+    
+    .footer-bottom{
+        background:#343a40;
+        color:#686868;
+        height:50px;
+        width:100%;
+        text-align:center;
+        position: absolute;
+        bottom:0;
+        left:0;
+        padding-top:10px;
+       
+    }
+
+}
+@media screen and (max-width:768px){
+    .card{
+        margin-top:10px;
+        width:18 rem; 
+        height:600px;
+    }
+    .background-sponsered{
+   
+        margin-top:50px;
+        background-image: url("../images/background-3.jpg");
+        background-size: 100%;
+        width:100%;
+        height:1100px;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+    .form-control{
+        font-size:14px;
+    }
+    #basic-addon2{
+        font-size:14px;
+    }
+    footer{
+        height:600px;
+        width:100%;
+        background:#303036;
+       
+        color:white;
+        position: relative;
+    }
+    
+    .footer-bottom{
+        background:#343a40;
+        color:#686868;
+        height:50px;
+        width:100%;
+        text-align:center;
+        position: absolute;
+        bottom:0;
+        left:0;
+        padding-top:10px;
+       
+    }
+
+}
+@media screen and (max-width:576px){
+    .background-sponsered{
+   
+        margin-top:50px;
+        background-image: url("../images/background-3.jpg");
+        background-size: 100%;
+        width:100%;
+        height:1450px;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+    .width{
+        width:300px;
+        height:350px;
+    }
+    footer{
+        height:850px;
+        width:100%;
+        background:#303036;
+       
+        color:white;
+        position: relative;
+    }
+    
+    .footer-bottom{
+        background:#343a40;
+        color:#686868;
+        height:50px;
+        width:100%;
+        text-align:center;
+        position: absolute;
+        bottom:0;
+        left:0;
+        padding-top:10px;
+       
+    }
+}
+@media screen and (min-width:360px){
+
 }
