--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,8 @@ img{
 .card-icon-wrapper{
     height:150px;
     width:150px;
-    background-color: cyan;
+    background-color: rgb(119, 126, 126);
+    
     border-radius:50%;
     position: absolute;
     left:100px;
@@ -153,117 +154,54 @@ footer{
     color:cyan;
 }
 @media screen and (max-width:992px){
-    .form-control{
-        font-size:14px;
-    }
-    #basic-addon2{
-        font-size:10px;
-    }
-    footer{
-        height:600px;
-        width:100%;
-        background:#303036;
+    #cardAfterSlider{
+        height:300px;
+        margin-bottom: 50px;
+        position:relative;
        
-        color:white;
-        position: relative;
     }
-    
-    .footer-bottom{
-        background:#343a40;
-        color:#686868;
-        height:50px;
-        width:100%;
-        text-align:center;
+    .card-icon-wrapper{
+        height:150px;
+        width:150px;
+        background-color: rgba(128, 255, 0, 0.144);
+        border-radius:50%;
         position: absolute;
-        bottom:0;
-        left:0;
-        padding-top:10px;
-       
+        left:75px;
+        top:-70px;
+    
     }
-
+    .fa-facebook{
+        font-size:50px;
+        position: absolute;
+        left:58px;
+        top:40px;
+        color:#5677BF;
+      
+    }
 }
 @media screen and (max-width:768px){
-    .card{
-        margin-top:10px;
-        width:18 rem; 
-        height:600px;
-    }
-    .background-sponsered{
-   
-        margin-top:50px;
-        background-image: url("../images/background-3.jpg");
-        background-size: 100%;
-        width:100%;
-        height:1100px;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-    }
-    .form-control{
-        font-size:14px;
-    }
-    #basic-addon2{
-        font-size:14px;
-    }
-    footer{
-        height:600px;
-        width:100%;
-        background:#303036;
+    #cardAfterSlider{
+        height:300px;
+        margin-bottom: 50px;
+        position:relative;
        
-        color:white;
-        position: relative;
     }
-    
-    .footer-bottom{
-        background:#343a40;
-        color:#686868;
-        height:50px;
-        width:100%;
-        text-align:center;
+    .card-icon-wrapper{
+        height:100px;
+        width:100px;
+        background-color: rgba(128, 255, 0, 0.144);
+        border-radius:50%;
         position: absolute;
-        bottom:0;
-        left:0;
-        padding-top:10px;
-       
-    }
-
-}
-@media screen and (max-width:576px){
-    .background-sponsered{
-   
-        margin-top:50px;
-        background-image: url("../images/background-3.jpg");
-        background-size: 100%;
-        width:100%;
-        height:1450px;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-    }
-    .width{
-        width:300px;
-        height:350px;
-    }
-    footer{
-        height:850px;
-        width:100%;
-        background:#303036;
-       
-        color:white;
-        position: relative;
-    }
+        left:50px;
+        top:-50px;
     
-    .footer-bottom{
-        background:#343a40;
-        color:#686868;
-        height:50px;
-        width:100%;
-        text-align:center;
-        position: absolute;
-        bottom:0;
-        left:0;
-        padding-top:10px;
-       
     }
-}
-@media screen and (min-width:360px){
-
+    .fa-facebook{
+        font-size:50px;
+        position: absolute;
+        left:35px;
+        top:20px;
+        color:#5677BF;
+      
+    }
 }
