--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 
 body{
     overflow-x:hidden;
-
+    background:linear-gradient(rgba(39, 39, 71, 0.055),lightblue);
     height: 100%;
     
 }
@@ -97,7 +97,7 @@ img{
    /* background-attachment: fixed;*/
 }
 footer{
-    height:600px;
+    height:615px;
     width:100%;
     background:#303036;
     margin-top:30px;
@@ -196,6 +196,7 @@ footer{
         top:-50px;
     
     }
+   
     .fa-facebook{
         font-size:50px;
         position: absolute;
@@ -203,5 +204,96 @@ footer{
         top:20px;
         color:#5677BF;
       
+    }
+    footer{
+        height:620px;
+        width:100%;
+        background:#303036;
+        margin-top:30px;
+        color:white;
+        position: relative;
+    }
+}
+@media screen and (max-width:576px){
+    #cardAfterSlider{
+      
+        height:250px;
+        margin-bottom: 50px;
+        position:relative;
+       
+    }
+    .card-icon-wrapper{
+        height:100px;
+        width:100px;
+        background-color: rgba(128, 255, 0, 0.144);
+        border-radius:50%;
+        position: absolute;
+        left:209px;
+        top:-50px;
+    
+    }
+    
+    .fa-facebook{
+        font-size:50px;
+        position: absolute;
+        left:35px;
+        top:20px;
+        color:#5677BF;
+      
+    }
+    footer{
+        height:850px;
+        width:100%;
+        background:#303036;
+        margin-top:30px;
+        color:white;
+        position: relative;
+    }
+}
+@media screen and (max-width:576px){
+    #cardAfterSlider{
+      
+        height:250px;
+        margin-bottom: 50px;
+        position:relative;
+       
+    }
+    .card-icon-wrapper{
+        height:100px;
+        width:100px;
+        background-color: rgba(128, 255, 0, 0.144);
+        border-radius:50%;
+        position: absolute;
+        left:209px;
+        top:-50px;
+    
+    }
+    
+    .fa-facebook{
+        font-size:50px;
+        position: absolute;
+        left:35px;
+        top:20px;
+        color:#5677BF;
+      
+    }
+    footer{
+        height:900px;
+        width:100%;
+        background:#303036;
+        margin-top:30px;
+        color:white;
+        position: relative;
+    }
+    .footer-bottom{
+        background:#343a40;
+        color:#686868;
+        height:80px;
+        width:100%;
+        text-align:center;
+        position: absolute;
+        bottom:0;
+        left:0;
+        padding:15px;
     }
 }
