--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@ body{
     background:linear-gradient(rgba(39, 39, 71, 0.055),lightblue);
     height: 100%;
     
+    font-family: 'Righteous', cursive;
 }
 .logo-s{
     font-family: 'Shojumaru';
@@ -41,11 +42,11 @@ img{
 .card-icon-wrapper{
     height:150px;
     width:150px;
-    background-color: rgb(119, 126, 126);
+    background-color: whitesmoke;
     
     border-radius:50%;
     position: absolute;
-    left:100px;
+    left:105px;
     top:-50px;
 
 }
@@ -88,7 +89,7 @@ img{
 }
 
 .background-sponsered{
-   
+    font-family: 'Bowlby One SC', cursive;
     margin-top:50px;
     background-image: url("../images/background-4.jpg");
     background-size: 100%;
@@ -97,6 +98,7 @@ img{
    /* background-attachment: fixed;*/
 }
 footer{
+   
     height:615px;
     width:100%;
     background:#303036;
@@ -192,7 +194,7 @@ footer{
         background-color: rgba(128, 255, 0, 0.144);
         border-radius:50%;
         position: absolute;
-        left:50px;
+        left:55px;
         top:-50px;
     
     }
@@ -250,10 +252,10 @@ footer{
         position: relative;
     }
 }
-@media screen and (max-width:576px){
+@media screen and (max-width:360px){
     #cardAfterSlider{
       
-        height:250px;
+        height:300px;
         margin-bottom: 50px;
         position:relative;
        
@@ -264,7 +266,7 @@ footer{
         background-color: rgba(128, 255, 0, 0.144);
         border-radius:50%;
         position: absolute;
-        left:209px;
+        left:124px;
         top:-50px;
     
     }
