--- a/css/student-gallary.css
+++ b/css/student-gallary.css
@@ -1,13 +1,14 @@
 
 body{
     overflow-x:hidden;
-    background-color:black;
+    font-family: 'Righteous', cursive;
     height: 100%;
     
 }
 .logo-s{
     font-family: 'Shojumaru';
     color:blue;
+    
 }
 .navbar{
     opacity: 75%;
@@ -28,7 +29,7 @@ body{
 
 /*footer section style is start here*/
 footer{
-    height:600px;
+    height:615px;
     width:100%;
     background:#303036;
     margin-top:30px;
@@ -65,6 +66,15 @@ footer{
 .socials .mx-3
 {
     transition:.5s;
+    margin-left: 15px;
+}
+.socials .fa-instagram,
+.socials .fa-twitter,
+.socials .fa-youtube,
+.socials .fa-google{
+    margin-left: 20px;
+    padding:10px;
+    transition:.5s;
 }
 .socials .fa-facebook:hover,
 .socials .fa-instagram:hover,
@@ -76,68 +86,51 @@ footer{
     color:cyan;
 }
 /*responsive footer site*/
-@media screen and (max-width:992px){
-    .form-control{
-        font-size:14px;
-    }
-    #basic-addon2{
-        font-size:10px;
-    }
 
-}
 @media screen and (max-width:768px){
     
-    .form-control{
-        font-size:14px;
-    }
-    #basic-addon2{
-        font-size:14px;
-    }
     footer{
-        height:600px;
+        height:620px;
         width:100%;
         background:#303036;
-       
+        margin-top:30px;
         color:white;
         position: relative;
     }
-    
-    .footer-bottom{
-        background:#343a40;
-        color:#686868;
-        height:50px;
-        width:100%;
-        text-align:center;
-        position: absolute;
-        bottom:0;
-        left:0;
-        padding-top:10px;
-       
-    }
-
 }
 @media screen and (max-width:576px){
     
-   
+    
     footer{
         height:850px;
         width:100%;
         background:#303036;
-       
+        margin-top:30px;
         color:white;
         position: relative;
     }
+}
+@media screen and (max-width:360px){
+  
     
+    
+    footer{
+        height:900px;
+        width:100%;
+        background:#303036;
+        margin-top:30px;
+        color:white;
+        position: relative;
+    }
     .footer-bottom{
         background:#343a40;
         color:#686868;
-        height:50px;
+        height:80px;
         width:100%;
         text-align:center;
         position: absolute;
         bottom:0;
         left:0;
-        padding-top:10px;
-       
+        padding:15px;
     }
 }
