--- a/css/teachers.css
+++ b/css/teachers.css
@@ -3,6 +3,7 @@ body{
     overflow-x:hidden;
     background-color:black;
     height: 100%;
+    font-family: 'Righteous', cursive;
     
 }
 .logo-s{
@@ -63,6 +64,15 @@ footer{
 .socials .mx-3
 {
     transition:.5s;
+    margin-left: 15px;
+}
+.socials .fa-instagram,
+.socials .fa-twitter,
+.socials .fa-youtube,
+.socials .fa-google{
+    margin-left: 20px;
+    padding:10px;
+    transition:.5s;
 }
 .socials .fa-facebook:hover,
 .socials .fa-instagram:hover,
@@ -74,3 +84,51 @@ footer{
     color:cyan;
 }
 /*responsive footer site*/
+
+@media screen and (max-width:768px){
+    
+    footer{
+        height:620px;
+        width:100%;
+        background:#303036;
+        margin-top:30px;
+        color:white;
+        position: relative;
+    }
+}
+@media screen and (max-width:576px){
+    
+    
+    footer{
+        height:850px;
+        width:100%;
+        background:#303036;
+        margin-top:30px;
+        color:white;
+        position: relative;
+    }
+}
+@media screen and (max-width:360px){
+  
+    
+    
+    footer{
+        height:900px;
+        width:100%;
+        background:#303036;
+        margin-top:30px;
+        color:white;
+        position: relative;
+    }
+    .footer-bottom{
+        background:#343a40;
+        color:#686868;
+        height:80px;
+        width:100%;
+        text-align:center;
+        position: absolute;
+        bottom:0;
+        left:0;
+        padding:15px;
+    }
+}
