--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 
 body{
     overflow-x:hidden;
-    background:linear-gradient(rgba(39, 39, 71, 0.055),lightblue);
+   
     height: 100%;
     
     font-family: 'Righteous', cursive;
@@ -15,7 +15,7 @@ body{
 }
 .navbar{
     opacity: 75%;
-    background-color:white;
+    background:linear-gradient(to left,#76478ab6,#ba3828);
 }
 
 #navbar{
@@ -24,6 +24,7 @@ body{
 }
 .page-wrapper{
     min-height: 100%;
+    
 }
 img{
     
@@ -42,7 +43,7 @@ img{
 .card-icon-wrapper{
     height:150px;
     width:150px;
-    background-color: whitesmoke;
+    background:linear-gradient(to left,#8942a8,#ba3828);
     
     border-radius:50%;
     position: absolute;
@@ -55,6 +56,7 @@ img{
     position: absolute;
     left:58px;
     top:40px;
+    color:blue;
   
 }
 
@@ -86,22 +88,53 @@ img{
 .width{
     width:600px;
     height:400px;
+    
+}
+.img-wrapper{
+    position: relative;
+}
+.img-wrapper:before{
+    content: "";
+    position: absolute;
+    width:100%;
+    height:50%;
+    right:0;
+    top:0;
+    background:linear-gradient(90deg,#76478ab6,#ba3828);
+    transition: .8s;
+}
+.img-wrapper:after{
+    content: "";
+    position: absolute;
+    width:100%;
+    height:50%;
+    bottom:0;
+    left:0;
+    background:linear-gradient(90deg,#76478ab6,#ba3828);
+    transition: .8s;
+}
+.img-wrapper:hover:before{
+    height: 0%;
+}
+.img-wrapper:hover:after{
+    height: 0%;
 }
 
 .background-sponsered{
     font-family: 'Bowlby One SC', cursive;
     margin-top:50px;
-    background-image: url("../images/background-4.jpg");
-    background-size: 100%;
+    background:linear-gradient(90deg,#76478ab6,#ba3828);
     
-    background-repeat: no-repeat;
-   /* background-attachment: fixed;*/
+    position: relative;
+   
+   
 }
+
 footer{
    
     height:615px;
     width:100%;
-    background:#303036;
+    background:linear-gradient(to left,#76478ab6,#ba3828);
     margin-top:30px;
     color:white;
     position: relative;
@@ -165,7 +198,7 @@ footer{
     .card-icon-wrapper{
         height:150px;
         width:150px;
-        background-color: rgba(128, 255, 0, 0.144);
+       
         border-radius:50%;
         position: absolute;
         left:75px;
@@ -191,7 +224,7 @@ footer{
     .card-icon-wrapper{
         height:100px;
         width:100px;
-        background-color: rgba(128, 255, 0, 0.144);
+        
         border-radius:50%;
         position: absolute;
         left:55px;
@@ -227,7 +260,7 @@ footer{
     .card-icon-wrapper{
         height:100px;
         width:100px;
-        background-color: rgba(128, 255, 0, 0.144);
+       
         border-radius:50%;
         position: absolute;
         left:209px;
@@ -263,7 +296,7 @@ footer{
     .card-icon-wrapper{
         height:100px;
         width:100px;
-        background-color: rgba(128, 255, 0, 0.144);
+       
         border-radius:50%;
         position: absolute;
         left:124px;
