--- a/css/student-gallary.css
+++ b/css/student-gallary.css
@@ -24,8 +24,35 @@ body{
 .page-wrapper{
     min-height: 100%;
 }
-.collage-photo img{
-    height: 350px;
+
+.img-wrapper{
+    
+    height: 160px;
+    
+    border-radius:20px;
+    padding:10px  10px ;
+    background:white;
+    margin-left:45px;
+    box-shadow: 5px 5px 20px gainsboro;
+   
+}
+.img-hover-effect{
+    position: relative;
+
+}
+.img-hover-effect:before{
+    content:"";
+    position: absolute;
+    width:100%;
+    height:100% ;
+    background:whitesmoke;
+    right:0;
+    left:-15px;
+    transition:.8s;
+
+}
+.img-hover-effect:hover:before{
+    height: 0%;
 }
 
 
@@ -93,8 +120,9 @@ footer{
 }
 /*responsive footer site*/
 
+
 @media screen and (max-width:768px){
-    
+   
     footer{
         height:620px;
         width:100%;
@@ -106,7 +134,6 @@ footer{
 }
 @media screen and (max-width:576px){
     
-    
     footer{
         height:850px;
         width:100%;
@@ -117,8 +144,6 @@ footer{
     }
 }
 @media screen and (max-width:360px){
-  
-    
     
     footer{
         height:900px;
