--- a/css/teachers.css
+++ b/css/teachers.css
@@ -1,7 +1,7 @@
 
 body{
     overflow-x:hidden;
-    background-color:black;
+    background:linear-gradient(to left,#8942a8,#ba3828);
     height: 100%;
     font-family: 'Righteous', cursive;
     
@@ -12,7 +12,7 @@ body{
 }
 .navbar{
     opacity: 75%;
-    background-color:white;
+    background:linear-gradient(to left,#8942a8,#ba3828);
 }
 .container{
     margin-top:50px;
@@ -21,8 +21,62 @@ body{
     border-bottom:1px solid cyan;
 }
 
+/*photo section desing is start from here*/
 
 
+.imgBox{
+    overflow:hidden;
+}
+.imgBox img{
+    transition: .5s;
+}
+.card:hover .imgBox img{
+    transform:scale(.9);
+    cursor: pointer;
+    border-radius: 100px;
+    
+}
+.card {
+    
+    color:#fff;
+    font-family: 'Baloo Chettan', cursive;
+
+}
+.card ul {
+    margin:0;
+    padding:0;
+    display:-webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width:100%;
+    height: 0;
+    transition:.5s;
+    overflow:hidden;
+    
+}
+.card:hover ul{
+    height: 70px;
+    
+}
+.card ul li {
+    list-style: none;
+    width:20%;
+    height: 250px;
+}
+.card ul li a {
+    display:block;
+    line-height: 50px;
+    text-align:center;
+    font-size:40px;
+    padding:10px;
+    text-decoration: none;
+    color:gray;
+    transition:all .5s;
+}
+.card ul li a:hover{
+    transform:rotate(360deg);
+    color:orange;
+}
 
 
 /*footer section style is start here*/
