--- a/css/student-gallary.css
+++ b/css/student-gallary.css
@@ -22,49 +22,47 @@ body{
 }
 
 .page-wrapper{
+    
     min-height: 100%;
 }
-
-.img-wrapper{
-    
-    height: 160px;
-    
-    border-radius:20px;
-    padding:10px  10px ;
-    background:white;
-    margin-left:45px;
-    box-shadow: 5px 5px 20px gainsboro;
-   
+.img-wrap img{
+    width:100px;
 }
-.img-hover-effect{
+.img-1,.img-2,.img-3{
+    padding:10px 30px;
+    border-radius:15px;
+    box-shadow: 5px 5px 10px gray;
+}
+.text-wrap{
+    
     position: relative;
 
 }
-.img-hover-effect:before{
-    content:"";
+.text-wrap:before{
+    font-family: 'Baloo Chettan', cursive;
+    content: "";
     position: absolute;
     width:100%;
-    height:100% ;
-    background:whitesmoke;
-    right:0;
-    left:-15px;
-    transition:.8s;
-
+    height:100%;
+    top:0;
+    left:0;
+    background:white;
+    transition: .8s;
 }
-.img-hover-effect:hover:before{
-    height: 0%;
+.text-wrap:hover:before{
+    height: 0;
+   
 }
-
-
 
 
 
 
 /*footer section style is start here*/
 footer{
-    height:615px;
+   
+    height:620px;
     width:100%;
-    background:#303036;
+    background:linear-gradient(to left,#76478ab6,#ba3828);
     margin-top:30px;
     color:white;
     position: relative;
@@ -89,10 +87,10 @@ footer{
 .link a li{
     transition:.5s;
     color:white;
-    text-decoration:none;
+   
 }
 .link a li:hover{
-    text-decoration: none;
+    text-decoration:none ;
     margin-left: 15px;
     
 }
@@ -118,10 +116,9 @@ footer{
     font-size:25px;
     color:cyan;
 }
-/*responsive footer site*/
-
 
 @media screen and (max-width:768px){
+   
    
     footer{
         height:620px;
@@ -133,6 +130,8 @@ footer{
     }
 }
 @media screen and (max-width:576px){
+  
+  
     
     footer{
         height:850px;
