again add something

--- a/css/student-gallary.css
+++ b/css/student-gallary.css
@@ -139,7 +139,7 @@ footer{
     footer{
         height:620px;
         width:100%;
-        background:#303036;
+       
         margin-top:30px;
         color:white;
         position: relative;
@@ -152,9 +152,9 @@ footer{
     footer{
         height:850px;
         width:100%;
-        background:#303036;
+        
         margin-top:30px;
-        color:white;
+        color:black;
         position: relative;
     }
 }
@@ -163,9 +163,9 @@ footer{
     footer{
         height:900px;
         width:100%;
-        background:#303036;
+      
         margin-top:30px;
-        color:white;
+        color:black;
         position: relative;
     }
     .footer-bottom{
