--- a/css/event.css
+++ b/css/event.css
@@ -86,39 +86,70 @@ footer{
     color:cyan;
 }
 
+@media screen and (max-width:992px){
+    footer{
+        height:900px;
+        width:100%;
+        background:linear-gradient(white,lightblue);
+        margin-top:30px;
+        color:black;
+        position: relative;
+    }
+}
 @media screen and (max-width:768px){
    
-   
     footer{
-        height:620px;
+        height:900px;
         width:100%;
-        background:#303036;
+        background:linear-gradient(white,lightblue);
         margin-top:30px;
-        color:white;
+        color:black;
         position: relative;
     }
+}
+@media screen and (max-width:730px){
+    footer{
+        height:900px;
+        width:100%;
+        background:linear-gradient(white,lightblue);
+        margin-top:30px;
+        color:black;
+        position: relative;
+    }
+    
 }
 @media screen and (max-width:576px){
-  
-  
-    
-    footer{
-        height:850px;
-        width:100%;
-        background:#303036;
-        margin-top:30px;
-        color:white;
-        position: relative;
-    }
-}
-@media screen and (max-width:360px){
     
     footer{
         height:900px;
         width:100%;
-        background:#303036;
+        background:linear-gradient(white,lightblue);
         margin-top:30px;
-        color:white;
+        color:black;
+        position: relative;
+    }
+    .footer-bottom{
+        background:#343a40;
+        color:#686868;
+        height:65px;
+        width:100%;
+        text-align:center;
+        position: absolute;
+        bottom:0;
+        left:0;
+        padding-top:15px;
+    }
+    
+}
+
+@media screen and (max-width:360px){
+    
+    footer{
+        height:1000px;
+        width:100%;
+        background:linear-gradient(white,lightblue);
+        margin-top:30px;
+        color:black;
         position: relative;
     }
     .footer-bottom{
